--- a/.github/workflows/ci-ant.yml
+++ b/.github/workflows/ci-ant.yml
@@ -17,10 +17,12 @@ jobs:
       run: |
         sudo sh -c "echo 'force-unsafe-io' > /etc/dpkg/dpkg.cfg.d/force-unsafe-io"
         sudo apt-get -qq install junit > /dev/null
-    - name: Download freenet.jar
+    - name: Download dependencies
       run: |
-        wget https://repo1.maven.org/maven2/org/hsqldb/hsqldb/2.7.2/hsqldb-2.7.2.jar -O lib/hsqldb.jar
-        wget https://repo1.maven.org/maven2/org/bouncycastle/bcprov-lts8on/2.73.4/bcprov-lts8on-2.73.4.jar -O lib/BouncyCastle.jar
+        mkdir lib
+        REPO=https://repo1.maven.org/maven2/org
+        wget $REPO/hsqldb/hsqldb/2.7.2/hsqldb-2.7.2.jar -O lib/hsqldb.jar
+        wget $REPO/bouncycastle/bcprov-lts8on/2.73.4/bcprov-lts8on-2.73.4.jar -O lib/BouncyCastle.jar
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
     - name: Upload Thaw
