--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,8 @@
 	<property name="javadoc.dir" value="javadoc" />
 	<property name="javac.debug" value="false" />
 	<property name="svn.revision" value="@custom@"/>
+	<property name="source-version" value="1.6"/>
+	<property name="target-version" value="1.6"/>
 
 	<property name="licenses.dir" value="licenses" />
 
@@ -39,7 +41,7 @@
 		</replace>
 
 
-		<javac srcdir="${src.dir}" destdir="${bin.dir}" debug="true" optimize="true" encoding="UTF8">
+		<javac srcdir="${src.dir}" destdir="${bin.dir}" source="${source-version}" target="${target-version}" debug="true" optimize="true" encoding="UTF8" includeantruntime="false">
 
 			<!-- <compilerarg value="-Xlint" /> -->
 			<classpath>
@@ -129,7 +131,7 @@
 		<delete dir="${build-test}"/>
 		<mkdir dir="${build-test}"/>
 
-		<javac srcdir="${test}" destdir="${build-test}" debug="on" optimize="on" source="1.6" target="1.6">
+		<javac srcdir="${test}" destdir="${build-test}" debug="on" optimize="on" source="${source-version}" target="${target-version}" includeantruntime="false">
 			<classpath>
 				<pathelement path="${bin.dir}"/>
 				<pathelement location="${junit.location}"/>
