--- a/build.xml
+++ b/build.xml
@@ -147,7 +147,9 @@
 			<classpath>
 				<pathelement path="${bin.dir}"/>
 				<pathelement path="${build-test}"/>
-				<pathelement location="${junit.location}"/>
+				<fileset dir="${junit.dir}">
+					<include name="**/junit.jar" />
+				</fileset>
 			</classpath>
 
 			<formatter type="plain" usefile="false"/>
