--- a/build.xml
+++ b/build.xml
@@ -134,7 +134,7 @@
 		<javac srcdir="${test}" destdir="${build-test}" debug="on" optimize="on" source="${source-version}" target="${target-version}" includeantruntime="false">
 			<classpath>
 				<pathelement path="${bin.dir}"/>
-				<pathelement location="/usr/share/java/"/>
+				<pathelement path="/usr/share/java/"/>
 			</classpath>
 			<compilerarg value="-Xlint"/>
 			<include name="**/*.java"/>
