--- a/.github/workflows/ci-ant.yml
+++ b/.github/workflows/ci-ant.yml
@@ -25,8 +25,8 @@ jobs:
         wget $REPO/bouncycastle/bcprov-lts8on/2.73.4/bcprov-lts8on-2.73.4.jar -qO lib/BouncyCastle.jar
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
-    - name: Upload Thaw
+    - name: Upload Thaw.jar
       uses: actions/upload-artifact@v4
       with:
         name: Thaw
-        path: bin/*
+        path: bin/Thaw.jar
